# procedural-gen

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: 1_terrain.md  2_buildings.md  3_items.md  index.md  plan.md
procedural_gen/: config.py  normal_utils.py  wcf.py
procedural_gen/morphology/: morphology.py
procedural_gen/noise/: fbm_base.py  fractal_sum.py  gradient_noise.py  interpolators.py  modifier.py  point.py  simulation.py  terrain_view.py  util.py  value_noise.py
procedural_gen/object_distribution/: item_map.py  object_instance.py  occupation_mask.py  shape.py
procedural_gen/region/: interval.py  region.py  region_dim.py  vec.py
procedural_gen/textures/: color_ramp.py  textures.py
procedural_gen/textures/effect/: modifiers.py  patch_template.py  patcher.py
procedural_gen/textures/noise/: model.py  my_gradient_noise.py  n_cache.py  seamless_noise.py  seed.py
tests/: test_item_map.py  test_morphology.py  test_shape.py
tests/noise/: test_fbm.py  test_noise.py  test_noise_cache.py  test_noise_model.py  test_noise_offset.py  test_perlin_seamless.py
tests/region/: test_interval.py  test_pos.py  test_region.py
